--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,5 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<!--<button th:href="@{/banks}">Список банков</button>-->
+
+<p><a href="/banks" th:method="get">Банки</a></p>
+<p><a href="/clients" th:method="get">Клиенты</a></p>
+<p><a href="/credits" th:method="get">Кредиты</a></p>
+
 </body>
 </html>
