added service layer, dto

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,9 +7,9 @@
 <body>
 <!--<button th:href="@{/banks}">Список банков</button>-->
 
-<p><a href="/banks" th:method="get">Банки</a></p>
-<p><a href="/clients" th:method="get">Клиенты</a></p>
-<p><a href="/credits" th:method="get">Кредиты</a></p>
+<p><a href="/banks/bankList" th:method="get">Банки</a></p>
+<p><a href="/clients/clientList" th:method="get">Клиенты</a></p>
+<p><a href="/credits/creditList" th:method="get">Кредиты</a></p>
 
 </body>
 </html>
