--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,13 +1,81 @@
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
+<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"-->
+<!--      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
+<!--<p><a href="/banks/bankList" th:method="get">Банки</a></p>-->
+<!--<p><a href="/clients/clientList" th:method="get">Клиенты</a></p>-->
+<!--<p><a href="/credits/creditList" th:method="get">Кредиты</a></p>-->
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Кредитный график</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="narrow-jumbotron.css" rel="stylesheet">
 </head>
+
 <body>
-<p><a href="/banks/bankList" th:method="get">Банки</a></p>
-<p><a href="/clients/clientList" th:method="get">Клиенты</a></p>
-<p><a href="/credits/creditList" th:method="get">Кредиты</a></p>
+
+<div class="container">
+    <div class="header clearfix">
+        <nav>
+            <ul class="nav nav-pills float-right">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+
+                </li>
+                <li class="nav-item">
+
+                </li>
+            </ul>
+        </nav>
+        <h3 class="text-muted">Расчет графика платежей по кредиту</h3>
+    </div>
+
+    <div class="jumbotron">
+        <ul class="list-group" style="">
+
+            <li class="list-group-item" style="top: auto; bottom: auto; text-align: center;">
+                <span style="font-size: 12px; white-space: nowrap; min-width: 0px; min-height: 0px; line-height: 22px; height: auto;"><b>
+                    <a href="/clients/clientList" th:method="get">Клиенты</a>
+                </b>
+                </span>
+            </li>
+            <li class="list-group-item" style="top: auto; bottom: auto; text-align: center;">
+                <span style="font-size: 12px; white-space: nowrap;"><b>
+                <a href="/banks/bankList" th:method="get">Банки</a>
+            </b>
+            </span>
+            </li>
+            <li class="list-group-item" style="top: auto; bottom: auto; text-align: center;"><span
+                    style="font-size: 12px; white-space: nowrap;"><b>Рассчитать график платежей</b></span></li>
+
+        </ul>
+
+
+        <p></p>
+    </div>
+
+    <div class="row marketing">
+
+
+    </div>
+
+    <footer class="footer">
+        <p>Vladimir Usov 2022</p>
+    </footer>
+
+</div> <!-- /container -->
+
 
 </body>
 </html>
