added bootstrap templates, fix CreditProcessor

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -57,7 +57,7 @@
             </span>
             </li>
             <li class="list-group-item" style="top: auto; bottom: auto; text-align: center;"><span
-                    style="font-size: 12px; white-space: nowrap;"><b>Рассчитать график платежей</b></span></li>
+                    style="font-size: 12px; white-space: nowrap;" ><b> <a href="/offer/preparation" th:method="get"> Рассчитать график платежей</a> </b></span></li>
 
         </ul>
 
